<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/l_bg"
    tools:context=".init.Register">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="40sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Welcome ！"
            android:textColor="#49392D"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:alpha="0.9"
            android:background="@drawable/round"
            android:backgroundTint="#99DED1C1"
            android:orientation="horizontal"
            android:padding="12dp">

            <LinearLayout
                android:id="@+id/lin_code"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="+86"
                    android:textColorLink="#49392D"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/imageView19"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/arrow_down" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_phone"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:alpha="0.9"
            android:background="@drawable/round"
            android:backgroundTint="#99DED1C1"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">


            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="50dp"
                android:layout_height="22dp"

                app:srcCompat="@drawable/icon_key" />

            <EditText
                android:id="@+id/edit_password"
                android:layout_width="wrap_content"
                android:layout_height="30sp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:ems="10"
                android:hint="@string/edit_password"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textSize="15sp" />

            <ImageView
                android:id="@+id/img_eye"
                android:layout_width="25dp"
                android:layout_height="20dp"
                app:srcCompat="@drawable/icon_eye_slash" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_wjmm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:textSize="10sp"
            android:text="@string/reg_text1"
            android:textColor="#9949392D" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:background="@drawable/round"
            android:text="@string/finish"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>