<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_bg"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_bg2"
    tools:context=".Homepage">


    <LinearLayout
        android:id="@+id/linearLayout13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="45dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="28dp"
                android:layout_height="29dp"
                app:srcCompat="@drawable/icon_ss" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_home_gdd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="0"
                android:textColor="#49392D"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="35dp"
                android:layout_height="29dp"
                app:srcCompat="@drawable/icon_gdd" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_home"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_menu_home"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/home"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_centre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_menu_center"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mall"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/tab_menu_setting"
            android:drawablePadding="3dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/mine"
            android:textColor="@drawable/tab_menu_text"
            android:textSize="12sp" />

    </LinearLayout>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_below="@+id/linearLayout13"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:background="#C7C7C7"
        android:visibility="visible" />


    <FrameLayout
        android:id="@+id/ly_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ly_tab_bar"
        android:layout_below="@+id/div_tab_bar"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp">

    </FrameLayout>

</RelativeLayout>
