<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/l_bg"
    tools:context=".init.Login">

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="start"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/icon_logo"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/wel_ren" />

            <LinearLayout
                android:id="@+id/lin_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="156****3829"
                    android:textColor="#49392D"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/txt_toast"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/login_text2"
                    android:textColor="#766759"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <Button
                    android:id="@+id/btn_loginregister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/round"
                    android:text="@string/login_btn1"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/round"
                    android:backgroundTint="#FFFFFF"
                    android:text="@string/login_btn2"
                    android:textColor="#766759"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:id="@+id/div_tab_bar1"
                    android:layout_width="90dp"
                    android:layout_height="3px"
                    android:layout_above="@id/ly_tab_bar"
                    android:layout_weight="1"
                    android:background="#DDC09E"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/login_text1"
                    android:textColor="#766759"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/div_tab_bar"
                    android:layout_width="90dp"
                    android:layout_height="3px"
                    android:layout_above="@id/ly_tab_bar"
                    android:layout_weight="1"
                    android:background="#DDC09E"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/google_login"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logos_google" />

                <ImageView
                    android:id="@+id/faacebook_login"
                    android:layout_width="24dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/logos_facebook" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>